COMP-49 Correct visibility/validation conflict with alt text

--- a/custom/themes/composites_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/composites_lib_unb_ca/src/scss/style.scss
@@ -206,7 +206,7 @@ main[role="main"] {
       top: 38%;
       font-size: 4em !important;
       color: white !important;
-      opacity: .7;
+      opacity: .5;
     }
 
     #views_slideshow_controls_text_previous_slideshow-block_1 a {
@@ -347,10 +347,6 @@ main[role="main"] {
       .field--name-field-bottom-y {
         width: 20%;
         display: inline-block;
-      }
-
-      .form-item-field-image-0-alt {
-        display: none;
       }
 
       .image-preview {
